# aa

./: .gitignore  readme.md
hw/docs/: 03-introduction.tex  04-analysis.tex  biblio.bib  hw.tex
lab_01/docs/: 00-preambule.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  coursework.tex  report.tex
lab_02/docs/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  biblio.bib  lab_02.tex
lab_03/docs/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  lab_03.tex
lab_04/docs/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  lab_04.tex
lab_04/src/: CMakeLists.txt  allocate.cpp  correcter.cpp  correcter.h  data.txt  levenstein.cpp  levenstein.h  main.cpp  measure_time.cpp  measure_time.h  utils.cpp  utils.h
lab_05/docs/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  lab_05.tex
lab_05/src/: CMakeLists.txt  allocate.h  atomic_queue.h  conveyor.cpp  conveyor.h  correcter.cpp  correcter.h  main.cpp  measure_time.cpp  measure_time.h  utils.cpp  utils.h
lab_06/docs/: 00-preambule.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  lab_04.tex  lab_06.tex
lab_07/docs/: 00-preambule.tex  03-introduction.tex  04-analysis.tex  (+6 more)
(+106 files in other folders)
